--- a/GraphIt.wasm/Pages/NavBar.razor
+++ b/GraphIt.wasm/Pages/NavBar.razor
@@ -14,7 +14,7 @@
             <li class="@NavElements[(int)NavChoice.Design] p-2" @onclick="(() => Click(NavChoice.Design))"><span class="pr-1 oi oi-pencil"></span>Design</li>
         </ul>
         <ul class="navbar-nav m-0">
-            <li class="@NavElements[(int)NavChoice.About] p-2" @onclick="(() => Click(NavChoice.About))"><span class="oi oi-info"></span></li>
+            <li class="@NavElements[(int)NavChoice.About] p-2" @onclick="(() => Click(NavChoice.About))"><span class="oi oi-question-mark"></span></li>
         </ul>
     </div>
 </nav>
