--- a/GraphIt.wasm/Pages/Design/SelectedEdge.razor
+++ b/GraphIt.wasm/Pages/Design/SelectedEdge.razor
@@ -46,7 +46,7 @@ else
                 Weight
             </div>
             <div class="p-custom">
-                <input class="shortInput" type="number" Min=1 value="@ActiveEdges[0].Weight" @onchange="OnWeightChange" />
+                <input class="shortInput" type="number" value="@ActiveEdges[0].Weight" @onchange="OnWeightChange" />
             </div>
         </li>
     }
@@ -76,7 +76,7 @@ else
                 Weight
             </div>
             <div class="p-custom">
-                <input class="shortInput" type="number" Min=1 @onchange="OnWeightChange" />
+                <input class="shortInput" type="number" @onchange="OnWeightChange" />
             </div>
         </li>
     }
