--- a/GraphIt.wasm/Pages/File.razor
+++ b/GraphIt.wasm/Pages/File.razor
@@ -69,7 +69,7 @@
                         Are you sure you want to restart?
                     </div>
                     <div class="d-flex align-items-baseline">
-                        <button class="btn btn-outline-success shadow-none btn-sm" @onclick="SaveGraphItFile">Save</button>
+                        <button class="btn btn-outline-success shadow-none btn-sm" @onclick="SaveGraphFile">Save</button>
                         <button class="btn btn-outline-danger shadow-none btn-sm" @onclick="() => UriHelper.NavigateTo(UriHelper.Uri, forceLoad: true)">New</button>
                         <button class="ml-auto btn btn-outline-dark shadow-none btn-sm" @onclick="(() => NewGraphCheck = false)">Cancel</button>
                     </div>
